--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Zero To Hero</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_favorites">Favorites</string>
+    <string name="menu_settings">Settings</string>
+    <string name="app_exit_label">Press BACK again to exit</string>
+    <string name="fragment_characters_title_label">Characters</string>
+    <string name="fragment_character_detail_title_label">Character Detail</string>
+    <string name="fragment_settings_title_label">Settings</string>
+
 </resources>
