--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,12 @@
     <string name="fragment_settings_title_label">Settings</string>
     <string name="character_list_label_last_known_location">"Last known location: "</string>
     <string name="splash_screen">Splash Screen</string>
+
+    <string name="bookmark_error">Something went wrong, please try again.</string>
+    <string name="bookmark_success">Character bookmarked successfully</string>
+    <string name="un_bookmark_success">Character bookmarked removed successfully</string>
+    <string name="character_gender_label">Gender:</string>
+    <string name="character_species_label">Species:</string>
+    <string name="character_location_label">Location:</string>
+    <string name="character_status_label">Status:</string>
 </resources>
